--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
   },
   "rules": {
     "quotes": "off",
+    "comma-dangle": "off",
     "class-methods-use-this": "off",
     "import/no-extraneous-dependencies": "off"
   }
