model user and validation fields

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
     "sourceType": "module"
   },
   "rules": {
+    "no-param-reassign": "off",
     "quotes": "off",
     "comma-dangle": "off",
     "class-methods-use-this": "off",
