--- a/.env
+++ b/.env
@@ -4,3 +4,7 @@ DATABASE_HOST=127.0.0.1
 DATABASE_PORT=3306
 DATABASE_USER=root
 DATABASE_PASSWORD=
+
+
+JWT_SECRET=sjhdksuyruealsaurue
+JWT_EXPIRE_IN=1d
